--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 
 	<groupId>org.mule.tooling.test</groupId>
 	<artifactId>mock-maven-repository</artifactId>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 
 		<aether.version>1.0.2.v20150114</aether.version>
-		<maven.version>3.3.9</maven.version>
+		<maven.version>3.5.0</maven.version>
 		<junit.version>4.12</junit.version>
 	</properties>
 
